<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/_10sdp"
        android:text="@string/lblAndroidService"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp" />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:text="@string/lblBackgroundService"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bgServiceStartBtn"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/lblStartBgService"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bgServiceStopBtn"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/lblStopBgService"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/MediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_5sdp"
        android:text="@string/lblForegroundService"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/foregroundServiceStartBtn"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/lblStartBgService"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/foregroundServiceStopBtn"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/lblStopBgService"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>